Fix shifting margin between page(s) and index

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,8 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	line-height: 1.6;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
 	max-width: 800px;
 	min-height: calc(100vh - 2rem);
 	padding: 0.75rem;
